--- a/README
+++ b/README
@@ -4,6 +4,8 @@ D-Bus for .NET
 This is a C# implementation of D-Bus, the small message bus with a big
 appetite.
 
+See http://www.ndesk.org/DBusSharp
+
 D-Bus is an inter-process communication framework that lets applications
 interface with the system event bus as well as allowing them to talk to
 one another in a peer-to-peer configuration.
